--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -68,6 +68,7 @@
         Elapsed: <span class="lookupTimer lookupTimerHL">--</span>
       </div>
       <div class="oneResult">New Div</div>
+      <h2>New Header</h2>
     </div>  
   </div>
 
