--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -33,8 +33,8 @@
     .charPicker span { cursor: default; }
     .hanziLookupChars { margin-bottom: 20px; }
 
-    .oneResult { background-color: #fce566; }
-
+    .oneResult { background-color: #fc66db; }
+    .oneResult { border: 5px solid #8d083b; }
 
 
 
@@ -67,8 +67,10 @@
       <div class="diagnostics">
         Elapsed: <span class="lookupTimer lookupTimerHL">--</span>
       </div>
-      <h2>New Header</h2>
+      <h2>One Result</h2>
       <div class="oneResult">New Div</div>
+      <h2>If Result</h2>
+      <div class="ifResult">New Div</div>
       
     </div>  
   </div>
