--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -137,7 +137,7 @@
         $(".oneResult").text(matches[0].hanzi);
         let filteredResults;
         for (var i = 0; i != matches.length; ++i) {
-          if (allowableChars.includes(matches[i])) {
+          if (allowableChars.includes(matches[i].hanzi)) {
            filteredResults += matches[i].hanzi;
           } 
           
