--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -34,7 +34,7 @@
     .hanziLookupChars { margin-bottom: 20px; }
 
     .oneResult { background-color: #fc66db; }
-    .ifResult { border: 5px solid #8d083b; }
+    .ifResult { border: 5px solid #c76c21; }
 
 
 
