--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -33,7 +33,8 @@
     .charPicker span { cursor: default; }
     .hanziLookupChars { margin-bottom: 20px; }
 
-    .oneResult { background-color: #fc66db; }
+    .oneResult { background-color: #fc66db; 
+                  font-size: x-large;}
     .ifResult { border: 5px solid #c76c21; }
 
 
