--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -34,8 +34,9 @@
     .hanziLookupChars { margin-bottom: 20px; }
 
     .oneResult { background-color: #fc66db; 
-                  font-size: x-large;}
-    .ifResult { border: 5px solid #d9f00c; }
+                  font-size: xx-large; }
+    .ifResult { border: 5px solid #d9f00c; 
+                  font-size: xx-large;}
 
 
 
