--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -10,7 +10,7 @@
     h1 { margin-bottom: 8px; }
     h2 { font-weight: normal; }
     .content, .header { 
-      width: 810px; margin: 0 auto; float: none; background-color: #6688aa; padding: 20px; color: #f0f0f0;
+      width: 810px; margin: 0 auto; float: none; background-color: rgba(0,0,0,0); padding: 20px; color: #f0f0f0;
       border-radius: 8px;
     }
     .header { text-align: center; margin-bottom: 20px; }
@@ -49,10 +49,6 @@
   </style>
 </head>
 <body>
-  <div class="header">
-    <h1>HanziLookup Rust/WASM demo</h1>
-    <a href="https://github.com/gugray/hanzi_lookup">github.com/gugray/hanzi_lookup</a>
-  </div>
   <div class="content">
     <div class="colLeft">
       <h1>Stroke input</h1>
