--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -35,7 +35,7 @@
 
     .oneResult { background-color: #fc66db; 
                   font-size: xx-large; }
-    .ifResult { border: 5px solid #af0cf0; 
+    .ifResult { border: 5px solid #f00c0c; 
                   font-size: xx-large; }
 
 
@@ -58,11 +58,11 @@
       </div>
     </div>
     <div class="colRight">
-      <h1>Recognized characters</h1>
+      <!--<h1>Recognized characters</h1>
       <div class="charPicker mmahLookupChars"></div>
       <div class="diagnostics">
-        Elapsed: <span class="lookupTimer lookupTimerHL">--</span>
-      </div>
+        <Elapsed: <span class="lookupTimer lookupTimerHL">--</span>
+      </div>-->
       <h2>One Result</h2>
       <div class="oneResult">New Div</div>
       <h2>If Result</h2>
