--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -14,9 +14,9 @@
       border-radius: 8px;
     }
     .header { text-align: center; margin-bottom: 20px; }
-    .header a { color: #fce566; text-decoration: none; }*/
+    .header a { color: #fce566; text-decoration: none; }
     .colLeft { width: 270px; }
-    .colRight { width: 500px; padding-left: 30px; }
+    .colRight { width: 500px; padding-left: 30px; }*/
     .drawingBoard { width: 250px; height: 250px; cursor: crosshair; clear: both; overflow: hidden; background-color: #fafafa; }
     .drawingBoard span { display: none; }
     .drawingBoard.loading { background-color: #f0f0f0; }
@@ -30,12 +30,12 @@
       border: 1px solid #a0a0a0; padding: 3px; height: 70px; width: 400px; font-size: 48px; background-color: #fafafa; overflow: hidden; 
       color: #606060;
     }
-    .charPicker span { cursor: default; }
-    /*.hanziLookupChars { margin-bottom: 20px; }*/
+    /* .charPicker span { cursor: default; }
+    .hanziLookupChars { margin-bottom: 20px; }*/
 
     .oneResult { background-color: #fc66db; 
                   font-size: xx-large; }
-    .ifResult { border: 5px solid #f00c0c; 
+    .ifResult { border: 5px solid #f0950c; 
                   font-size: xx-large; }
 
 
@@ -130,7 +130,7 @@
 
         //*****************
 
-        if (matches[0].hanzi) {
+        if (matches[0]) {
           $(".oneResult").text(matches[0].hanzi);
           let filteredResults = "";
           for (var i = 0; i != matches.length; ++i) {
