--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     /*body { background-color: #fafafa; font-family: Verdana, sans-serif; padding-top: 70px; } */
-    div, h1, h2 { position: relative; float: left; box-sizing: border-box; height: auto; overflow: auto; width: 100%; margin: 0; }
+    /*div, h1, h2 { position: relative; float: left; box-sizing: border-box; height: auto; overflow: auto; width: 100%; margin: 0; }*/
     /*h1 { margin-bottom: 8px; }
     h2 { font-weight: normal; }
     .content, .header { 
@@ -35,7 +35,7 @@
 
     .oneResult { background-color: #fc66db; 
                   font-size: xx-large; }
-    .ifResult { border: 5px solid #f0950c; 
+    .ifResult { border: 5px solid #d9f00c; 
                   font-size: xx-large; }
 
 
@@ -64,9 +64,9 @@
         <Elapsed: <span class="lookupTimer lookupTimerHL">--</span>
       </div>-->
       <h2>One Result</h2>
-      <div class="oneResult">New Div</div>
+      <div class="oneResult">?</div>
       <h2>If Result</h2>
-      <div class="ifResult">New Div</div>
+      <div class="ifResult">?</div>
       
     </div>  
   </div>
