--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -19,7 +19,7 @@
     .colRight { width: 500px; padding-left: 30px; }*/
     .drawingBoard { width: 250px; height: 250px; cursor: crosshair; clear: both; overflow: hidden; background-color: #fafafa; }
     .drawingBoard span { display: none; }
-    .drawingBoard.loading { background-color: #f0f0f0; }
+    /*.drawingBoard.loading { background-color: #f0f0f0; }*/
     .drawingBoard.loading span { display: inline; color: #606060; }
     .commands { width: 250px; margin-top: 3px; }
     .cmd { width: 122px; background-color: #fce7c0; text-align: center; cursor: default; padding: 3px; color: #606060; }
@@ -63,10 +63,8 @@
       <div class="diagnostics">
         <Elapsed: <span class="lookupTimer lookupTimerHL">--</span>
       </div>-->
-      <h2>One Result</h2>
-      <div class="oneResult">?</div>
-      <h2>If Result</h2>
-      <div class="ifResult">?</div>
+      <div class="oneResult">1</div>
+      <div class="ifResult">if</div>
       
     </div>  
   </div>
