--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -17,7 +17,7 @@
     .header a { color: #fce566; text-decoration: none; }
     .colLeft { width: 270px; }
     .colRight { width: 500px; padding-left: 30px; }*/
-    .drawingBoard { width: 250px; height: 250px; cursor: crosshair; clear: both; overflow: hidden; background-color: #fafafa; }
+    .drawingBoard { width: 250px; height: 250px; cursor: crosshair; clear: both; overflow: hidden; }/*background-color: #fafafa; }*/
     .drawingBoard span { display: none; }
     /*.drawingBoard.loading { background-color: #f0f0f0; }*/
     .drawingBoard.loading span { display: inline; color: #606060; }
