moved hanzi_lookup script to sf.js

--- a/web_demo/index2.html
+++ b/web_demo/index2.html
@@ -60,7 +60,7 @@
         <script src="drawingBoard.js"></script>
         <script src="hanzi-writer.js"></script>
         <script src="sf.js" async defer></script>
-        <script>
+        <!--<script>
             var allowableChars = ['一', '十', '我'];
             var hanziLookupDemoApp = (function () {
               var _drawingBoard;
@@ -132,7 +132,7 @@
         
               }
             })();
-          </script>
+          </script>-->
     </body>
 </html>
 
