--- a/web_demo/index2.html
+++ b/web_demo/index2.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Liu+Jian+Mao+Cao&display=swap" rel="stylesheet">
 
 
-        
+
     </head>
     <body>
         
@@ -21,17 +21,17 @@
         </div>
 
         <div class="content">
-            <div class="colLeft">
+            <!--<div class="colLeft">-->
               <div class="drawingBoard loading"><span>Loading...</span></div>
               <div class="commands">
                 <div class="cmd cmdUndo">Undo</div>
                 <div class="cmd cmdClear">Clear</div><br/>
               </div>
-            </div>
-            <div class="colRight">
+            <!--</div>
+            <div class="colRight">-->
               <div class="oneResult">1</div>
               <div class="ifResult">if</div>
-            </div>  
+            <!--</div>-->
         </div>
 
         <script src="jquery-3.4.1.min.js"></script>
