--- a/web_demo/index2.html
+++ b/web_demo/index2.html
@@ -44,13 +44,13 @@
               var _drawingBoard;
               var _worker;
               var _start;
-        
+            --><script>
               $(document).ready(function () {
                 _worker = new Worker('worker.js');
                 _worker.onmessage = onWorkerMessage;
                 _worker.postMessage({ wasm_uri: 'hanzi_lookup_bg.wasm' });
               });
-        
+        </script><!--
               function onWorkerMessage(e) {
                 if (!e.data.what) return;
                 if (e.data.what == "loaded") initApp();
