--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -22,7 +22,7 @@
 
         <div class="content">
             <!--<div class="colLeft">-->
-              <div class="drawingBoard loading"><span>Loading...</span></div>
+              <div class="drawingBoard loading overlay" id="input-overlay"><span>Loading...</span></div>
               <div class="commands">
                 <div class="cmd cmdUndo">Undo</div>
                 <div class="cmd cmdClear">Clear</div><br/>
