adjusted css for overlay

--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -18,9 +18,9 @@
             <div class="overlay" id="overlay-div-1"> </div>
             <div class="overlay" id="overlay-div-2"> </div>
             <div class="overlay" id="overlay-div-3"> </div>
-        </div>
+        <!--</div>-->
 
-        <div class="content">
+        <!--<div class="content">-->
             <!--<div class="colLeft">-->
               <div class="drawingBoard loading overlay" id="input-overlay"><span>Loading...</span></div>
               <div class="commands">
