--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -23,14 +23,16 @@
         <!--<div class="content">-->
             <!--<div class="colLeft">-->
               <div class="drawingBoard loading overlay" id="input-overlay"><span>Loading...</span></div>
-              <div class="commands">
+              <div class="commands overlay">
                 <div class="cmd cmdUndo">Undo</div>
                 <div class="cmd cmdClear">Clear</div><br/>
               </div>
             <!--</div>
             <div class="colRight">-->
-              <div class="oneResult">1</div>
-              <div class="ifResult">if</div>
+              <div class="results overlay">
+                <div class="oneResult">1</div>
+                <div class="ifResult">if</div>
+              </div>
             <!--</div>-->
         </div>
 
