--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -29,9 +29,9 @@
               </div>
             <!--</div>
             <div class="colRight">-->
-              <div class="results overlay">
-                <div class="oneResult">1</div>
-                <div class="ifResult">if</div>
+              <div class="results overlay" id="allResults">
+                <div class="results overlay" id="oneResult">1</div>
+                <div class="results overlay" id="ifResult">if</div>
               </div>
             <!--</div>-->
         </div>
