--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -29,7 +29,7 @@
               </div>
             <!--</div>
             <div class="colRight">-->
-              <div class="results overlay" id="allResults">
+              <div class="overlay" id="allResults">
                 <div class="results overlay" id="oneResult">1</div>
                 <div class="results overlay" id="ifResult">if</div>
               </div>
