--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -22,16 +22,16 @@
 
         <!--<div class="content">-->
             <!--<div class="colLeft">-->
-              <div class="drawingBoard loading overlay2" id="input-overlay"><span>Loading...</span></div>
-              <div class="commands overlay2">
-                <div class="cmd cmdUndo">Undo</div>
-                <div class="cmd cmdClear">Clear</div><br/>
+              <div class="drawingBoard loading overlay" id="input-overlay"><span>Loading...</span></div>
+              <div class="commands overlay">
+                <div class="cmd cmdUndo overlay">Undo</div>
+                <div class="cmd cmdClear overlay">Clear</div><br/>
               </div>
             <!--</div>
             <div class="colRight">-->
-              <div class="overlay2" id="allResults">
-                <div class="results overlay2" id="oneResult">1</div>
-                <div class="results overlay2" id="ifResult">if</div>
+              <div class="overlay" id="allResults">
+                <div class="results overlay" id="oneResult">1</div>
+                <div class="results overlay" id="ifResult">if</div>
               </div>
             <!--</div>-->
         </div>
