--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -23,10 +23,10 @@
         <!--<div class="content">-->
             <!--<div class="colLeft">-->
               <div class="drawingBoard loading overlay" id="input-overlay"><span>Loading...</span></div>
-              <div class="commands overlay">
+              <!--<div class="commands overlay">-->
                 <div class="cmd cmdUndo overlay">Undo</div>
                 <div class="cmd cmdClear overlay">Clear</div><br/>
-              </div>
+              <!--</div>-->
             <!--</div>
             <div class="colRight">-->
                 <div class="results overlay" id="oneResult">1</div>
