--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -22,15 +22,15 @@
 
         <!--<div class="content">-->
             <!--<div class="colLeft">-->
-              <div class="drawingBoard loading overlay" id="input-overlay"><span>Loading...</span></div>
+              <div class="drawingBoard loading overlay2" id="input-overlay"><span>Loading...</span></div>
               <!--<div class="commands overlay">-->
-                <div class="cmd cmdUndo overlay">Undo</div>
-                <div class="cmd cmdClear overlay">Clear</div><br/>
+                <div class="cmd cmdUndo overlay2">Undo</div>
+                <div class="cmd cmdClear overlay2">Clear</div><br/>
               <!--</div>-->
             <!--</div>
             <div class="colRight">-->
-                <div class="results overlay" id="oneResult"><p id="oneResultP">1</p></div>
-                <div class="results overlay" id="ifResult"><p id = "ifResultP">if</p></div>
+                <div class="results overlay2" id="oneResult"><p id="oneResultP">1</p></div>
+                <div class="results overlay2" id="ifResult"><p id="ifResultP">if</p></div>
             <!--</div>-->
         </div>
 
