--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -18,20 +18,18 @@
             <div class="overlay" id="overlay-div-1"> </div>
             <div class="overlay" id="overlay-div-2"> </div>
             <div class="overlay" id="overlay-div-3"> </div>
-        <!--</div>-->
 
-        <!--<div class="content">-->
-            <!--<div class="colLeft">-->
-              <div class="drawingBoard loading overlay2" id="input-overlay"><span>Loading...</span></div>
-              <!--<div class="commands overlay">-->
-                <div class="cmd cmdUndo overlay2">Undo</div>
-                <div class="cmd cmdClear overlay2">Clear</div><br/>
-              <!--</div>-->
-            <!--</div>
-            <div class="colRight">-->
+            <div class="drawingBoard loading overlay2" id="input-overlay"><span>Loading...</span></div>
+            
+            <div class="commands">
+              <div class="cmd cmdUndo overlay2">Undo</div>
+              <div class="cmd cmdClear overlay2">Clear</div><br/>
+            </div>
+            
+            <div id="allResults">
                 <div class="results overlay2" id="oneResult"><p id="oneResultP">1</p></div>
                 <div class="results overlay2" id="ifResult"><p id="ifResultP">if</p></div>
-            <!--</div>-->
+            </div>
         </div>
 
         <script src="jquery-3.4.1.min.js"></script>
