hide input divs & move little ones over

--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -19,16 +19,16 @@
             <div class="overlay" id="overlay-div-2"> </div>
             <div class="overlay" id="overlay-div-3"> </div>
 
-            <div class="drawingBoard loading overlay2" id="input-overlay"><span>Loading...</span></div>
-            
-            <div class="commands">
-              <div class="cmd cmdUndo overlay2">Undo</div>
-              <div class="cmd cmdClear overlay2">Clear</div><br/>
+            <div class="drawingBoard loading overlay2 hideable hidden" id="input-overlay"><span>Loading...</span></div>
+
+            <div class="commands hideable hidden">
+              <div class="cmd cmdUndo overlay2 hideable hidden" id="cmdUndo">Undo</div>
+              <div class="cmd cmdClear overlay2 hideable hidden" id="cmdClear">Clear</div><br/>
             </div>
             
-            <div id="allResults">
-                <div class="results overlay2" id="oneResult"><p id="oneResultP">1</p></div>
-                <div class="results overlay2" id="ifResult"><p id="ifResultP">if</p></div>
+            <div id="allResults hideable hidden">
+                <div class="results overlay2 hideable hidden" id="oneResult"><p id="oneResultP">1</p></div>
+                <div class="results overlay2 hideable hidden" id="ifResult"><p id="ifResultP">if</p></div>
             </div>
         </div>
 
