--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -24,9 +24,9 @@
             <div class="commands hideable hidden">
               <div class="cmd cmdUndo overlay2 hideable hidden" id="cmdUndo">Undo</div>
               <div class="cmd cmdClear overlay2 hideable hidden" id="cmdClear">Clear</div><br/>
-            </div>
+            <!--</div>-->
             
-            <div id="allResults hideable hidden">
+            <!--<div id="allResults hideable hidden">-->
                 <div class="results overlay2 hideable hidden" id="oneResult"><p id="oneResultP">1</p></div>
                 <div class="results overlay2 hideable hidden" id="ifResult"><p id="ifResultP">if</p></div>
             </div>
