--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -21,15 +21,15 @@
 
             <div class="drawingBoard loading overlay2 hideable hidden" id="input-overlay"><span>Loading...</span></div>
 
-            <div class="commands hideable hidden">
+            <!--<div class="commands hideable hidden">-->
               <div class="cmd cmdUndo overlay2 hideable hidden" id="cmdUndo">Undo</div>
               <div class="cmd cmdClear overlay2 hideable hidden" id="cmdClear">Clear</div><br/>
             <!--</div>-->
             
             <!--<div id="allResults hideable hidden">-->
-                <div class="results overlay2 hideable hidden" id="oneResult"><p id="oneResultP">1</p></div>
-                <div class="results overlay2 hideable hidden" id="ifResult"><p id="ifResultP">if</p></div>
-            </div>
+                <div class="results overlay2 hideable hidden" id="oneResult">1</div>
+                <div class="results overlay2 hideable hidden" id="ifResult">if</div>
+            <!--</div>-->
         </div>
 
         <script src="jquery-3.4.1.min.js"></script>
@@ -37,6 +37,8 @@
         <script src="hanzi-writer.js"></script>
         <script src="sf.js" async defer></script>
         <script>
+
+
             // Hanzi_lookup script
             var allowableChars = ['一', '十', '我'];
             var hanziLookupDemoApp = (function () {
