--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -74,6 +74,9 @@
                   _drawingBoard.redraw();
                   lookup();
                 });
+                $("#ifResult").click(function (evt) {
+                  attack(evt);
+                });
               }
         
               // Fetches hand-drawn input from drawing board and looks up Hanzi
