--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -22,8 +22,8 @@
             <div class="drawingBoard loading overlay2 hideable hidden" id="input-overlay"><span>Loading...</span></div>
 
             <!--<div class="commands hideable hidden">-->
-              <div class="cmd cmdUndo overlay2 hideable hidden" id="cmdUndo">Undo</div>
-              <div class="cmd cmdClear overlay2 hideable hidden" id="cmdClear">Clear</div><br/>
+              <div class="cmd cmdUndo overlay2 hideable hidden" id="cmdUndo">⤺</div>
+              <div class="cmd cmdClear overlay2 hideable hidden" id="cmdClear">🗑</div><br/>
             <!--</div>-->
             
             <!--<div id="allResults hideable hidden">-->
