moved allowable characters to sf.js

--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -40,7 +40,7 @@
 
 
             // Hanzi_lookup script
-            var allowableChars = ['一', '十', '我'];
+            var allowableChars = [];
             var hanziLookupDemoApp = (function () {
               var _drawingBoard;
               var _worker;
