erase results when trash

--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -73,6 +73,8 @@
                   _drawingBoard.clearCanvas();
                   _drawingBoard.redraw();
                   lookup();
+                  $("#oneResult").text="";
+                  $("ifResult").text="";
                 });
                 $("#ifResult").click(function (evt) {
                   attack(evt);
