empty buttons after use

--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -74,7 +74,7 @@
                   _drawingBoard.redraw();
                   lookup();
                   $("#oneResult").text="";
-                  $("ifResult").text="";
+                  $("#ifResult").text="";
                 });
                 $("#ifResult").click(function (evt) {
                   attack(evt);
