--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -73,8 +73,8 @@
                   _drawingBoard.clearCanvas();
                   _drawingBoard.redraw();
                   lookup();
-                  $("#oneResult").text="";
-                  $("#ifResult").text="";
+                  $("#oneResult").text("");
+                  $("#ifResult").text("");
                 });
                 $("#ifResult").click(function (evt) {
                   attack(evt);
