--- a/web_demo/index.html
+++ b/web_demo/index.html
@@ -19,17 +19,14 @@
             <div class="overlay" id="overlay-div-2"> </div>
             <div class="overlay" id="overlay-div-3"> </div>
 
-            <div class="drawingBoard loading overlay2 hideable hidden" id="input-overlay"><span>Loading...</span></div>
+            <div class="overlayMid widget hideable hidden" id="qiWidget"></div>
 
-            <!--<div class="commands hideable hidden">-->
-              <div class="cmd cmdUndo overlay2 hideable hidden" id="cmdUndo">⤺</div>
-              <div class="cmd cmdClear overlay2 hideable hidden" id="cmdClear">🗑</div><br/>
-            <!--</div>-->
-            
-            <!--<div id="allResults hideable hidden">-->
-                <div class="results overlay2 hideable hidden" id="oneResult"></div>
-                <div class="results overlay2 hideable hidden" id="ifResult"></div>
-            <!--</div>-->
+            <div class="drawingBoard loading overlay2 hideable hidden" id="input-overlay"><span>Loading...</span></div>
+            <div class="cmd cmdUndo overlay2 hideable hidden" id="cmdUndo">⤺</div>
+            <div class="cmd cmdClear overlay2 hideable hidden" id="cmdClear">🗑</div><br/>
+            <div class="results overlay2 hideable hidden" id="oneResult"></div>
+            <div class="results overlay2 hideable hidden" id="ifResult"></div>
+
         </div>
 
         <script src="jquery-3.4.1.min.js"></script>
